fixed number of hero section bugs: removed outline if focused, removed fixed-ratio, feature button is white only for desktop, image is a link now, fixed overflowing text for small desktop screens

--- a/app/assets/stylesheets/redesign/components/_hero.scss
+++ b/app/assets/stylesheets/redesign/components/_hero.scss
@@ -2,6 +2,10 @@
 -------------------------------------------------------*/
 .hero-wrap {
 
+  > a {
+    display: block;
+  }
+
   .media-wrap {
     min-height: 100px;
   }
@@ -128,6 +132,11 @@
       a,
       span {
         color: $c-neutral-white;
+      }
+
+      .btn-featured {
+        color: $c-neutral-white;
+        border-color: $c-neutral-white;
       }
 
     }
